force-app/main/default/objects/Prospect__c/fields/Corporate_Company__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Company__c</fullName>
    <label>Corporate Company</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_Source__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Abacus Group</fullName>
            </value>
            <value>
                <fullName>Abbott India</fullName>
            </value>
            <value>
                <fullName>Accenture Group</fullName>
            </value>
            <value>
                <fullName>ACC Ltd</fullName>
            </value>
            <value>
                <fullName>Adfactors PR</fullName>
            </value>
            <value>
                <fullName>Aditya Birla Group</fullName>
            </value>
            <value>
                <fullName>Aegis Global</fullName>
            </value>
            <value>
                <fullName>AGC Networks Ltd</fullName>
            </value>
            <value>
                <fullName>Agility Logistics</fullName>
            </value>
            <value>
                <fullName>Airtel India</fullName>
            </value>
            <value>
                <fullName>Alchemist Solution</fullName>
            </value>
            <value>
                <fullName>All Cargo Logistics</fullName>
            </value>
            <value>
                <fullName>Allied Digital Services</fullName>
            </value>
            <value>
                <fullName>Ambuja Cement</fullName>
            </value>
            <value>
                <fullName>American Express</fullName>
            </value>
            <value>
                <fullName>AMW Motors</fullName>
            </value>
            <value>
                <fullName>AnandRathi Group</fullName>
            </value>
            <value>
                <fullName>Andromeda Group</fullName>
            </value>
            <value>
                <fullName>Asian Paints Ltd</fullName>
            </value>
            <value>
                <fullName>Atos Technology</fullName>
            </value>
            <value>
                <fullName>Axis Group</fullName>
            </value>
            <value>
                <fullName>Bajaj Group</fullName>
            </value>
            <value>
                <fullName>Baker Hughes Oilfield</fullName>
            </value>
            <value>
                <fullName>Bank of America</fullName>
            </value>
            <value>
                <fullName>Bank of Baroda</fullName>
            </value>
            <value>
                <fullName>BARC India</fullName>
            </value>
            <value>
                <fullName>Bayer India Ltd</fullName>
            </value>
            <value>
                <fullName>Berger Paints</fullName>
            </value>
            <value>
                <fullName>Bharat Petroleum (BPCL)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>