force-app/main/default/objects/Prospect__c/fields/CRM_Call_Proposed_Date_Of_Visit__c.field-meta.xml
<CustomField>
    <fullName>CRM_Call_Proposed_Date_Of_Visit__c</fullName>
    <label>CRM Call Proposed Date Of Visit</label>
    <type>DateTime</type>
</CustomField>