force-app/main/default/objects/Prospect__c/fields/Customer_Reference__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Reference</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Prospects (Customer Reference)</relationshipLabel>
    <relationshipName>Prospects1</relationshipName>
    <type>Lookup</type>
</CustomField>