force-app/main/default/objects/Prospect__c/fields/First_CRM_Call_Attempt_Date__c.field-meta.xml
<CustomField>
    <fullName>First_CRM_Call_Attempt_Date__c</fullName>
    <label>First CRM Call Attempt Date</label>
    <type>DateTime</type>
</CustomField>