force-app/main/default/objects/Prospect__c/fields/is_Converted__c.field-meta.xml
<CustomField>
    <fullName>is_Converted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Converted</label>
    <type>Checkbox</type>
</CustomField>