force-app/main/default/objects/Prospect__c/fields/Last_Call_Attempt_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Attempt_Date__c</fullName>
    <label>Last Call Attempt Date</label>
    <type>DateTime</type>
</CustomField>