force-app/main/default/objects/Prospect__c/fields/Last_call_attempted_by__c.field-meta.xml
<CustomField>
    <fullName>Last_call_attempted_by__c</fullName>
    <label>Last Call Attempted By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>