force-app/main/default/objects/Prospect__c/fields/Last_call_description__c.field-meta.xml
<CustomField>
    <fullName>Last_call_description__c</fullName>
    <label>Last Call Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>