force-app/main/default/objects/Prospect__c/fields/Last_CRM_call_attempted_by__c.field-meta.xml
<CustomField>
    <fullName>Last_CRM_call_attempted_by__c</fullName>
    <label>Last CRM call attempted by</label>
    <length>50</length>
    <type>Text</type>
</CustomField>