force-app/main/default/objects/Prospect__c/fields/Last_Presales_Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Presales_Task_Id__c</fullName>
    <label>Latest Presales Task Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>