force-app/main/default/objects/Prospect__c/fields/Lead_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sub_Source__c</fullName>
    <label>Lead Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_Source__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>99 Acres</fullName>
            </value>
            <value>
                <fullName>Airoli - koparkhairane</fullName>
            </value>
            <value>
                <fullName>Alternate Channel Partner</fullName>
            </value>
            <value>
                <fullName>Anarock AOP</fullName>
            </value>
            <value>
                <fullName>Anarock central zone</fullName>
            </value>
            <value>
                <fullName>Anarock KDMC</fullName>
            </value>
            <value>
                <fullName>Anarock Navi Mumbai</fullName>
            </value>
            <value>
                <fullName>Anarock Thane</fullName>
            </value>
            <value>
                <fullName>Anarock Western + SOBO</fullName>
            </value>
            <value>
                <fullName>BING</fullName>
            </value>
            <value>
                <fullName>BKC</fullName>
            </value>
            <value>
                <fullName>Brightroll</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Chembur – Wadala</fullName>
            </value>
            <value>
                <fullName>Churchgate – Worli</fullName>
            </value>
            <value>
                <fullName>click.in</fullName>
            </value>
            <value>
                <fullName>Click India</fullName>
            </value>
            <value>
                <fullName>COLOMBIA</fullName>
            </value>
            <value>
                <fullName>Commonfloor</fullName>
            </value>
            <value>
                <fullName>DBM</fullName>
            </value>
            <value>
                <fullName>EDM / Email</fullName>
            </value>
            <value>
                <fullName>EEH – Kanjurmarg - Mulund - Nahur</fullName>
            </value>
            <value>
                <fullName>EEH – Sion –Vikhroli</fullName>
            </value>
            <value>
                <fullName>Emailer</fullName>
            </value>
            <value>
                <fullName>Emailer Call</fullName>
            </value>
            <value>
                <fullName>Email marketing</fullName>
            </value>
            <value>
                <fullName>Employee reference</fullName>
            </value>
            <value>
                <fullName>ETOUR</fullName>
            </value>
            <value>
                <fullName>ETROS</fullName>
            </value>
            <value>
                <fullName>Exclusive Apartments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>