force-app/main/default/objects/Prospect__c/fields/Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Mobile_No__c</fullName>
    <formula>IF( AND(Lead__c == null , Opportunity__c == null ,Account__c != null ) , Account__r.Mobile_No__c , IF(Lead__r.IsConverted == true, Opportunity__r.Account.Mobile_No__c , IF( Opportunity__c != null, Opportunity__r.Account.Mobile_No__c , Lead__r.RW_Mobile_No__c ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile No</label>
    <type>Text</type>
</CustomField>