force-app/main/default/objects/Prospect__c/fields/Project_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Project_Name_Formula__c</fullName>
    <formula>Project__r.Name</formula>
    <label>Project Name Formula</label>
    <type>Text</type>
</CustomField>