force-app/main/default/objects/Prospect__c/fields/Prospect_Stage__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Stage__c</fullName>
    <formula>IF(AND(Lead__c != null, Lead__r.IsConverted == false),&apos;Open&apos;,
IF(AND(Opportunity__c != null,TEXT(Opportunity__r.StageName) != &apos;Unit Booked&apos;),&apos;Visit Done&apos;,IF(AND(Opportunity__c != null,TEXT(Opportunity__r.StageName) == &apos;Unit Booked&apos;),&apos;Booked&apos;,&apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospect Stage</label>
    <type>Text</type>
</CustomField>