force-app/main/default/objects/Prospect__c/fields/Retention_Closing_Head_Name__c.field-meta.xml
<CustomField>
    <fullName>Retention_Closing_Head_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retention Closing Head Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Prospects1</relationshipName>
    <type>Lookup</type>
</CustomField>