force-app/main/default/objects/Prospect__c/fields/Sales_Call_Attempt_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Call_Attempt_Date__c</fullName>
    <label>Latest Sales Call Attempt Date</label>
    <type>DateTime</type>
</CustomField>