force-app/main/default/objects/Prospect__c/fields/Sales_Call_Attempt_Status__c.field-meta.xml
<CustomField>
    <fullName>Sales_Call_Attempt_Status__c</fullName>
    <label>Last Sales Call Attempt Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>