force-app/main/default/objects/Prospect__c/fields/Sales_Call_Description__c.field-meta.xml
<CustomField>
    <fullName>Sales_Call_Description__c</fullName>
    <label>Last Sales Call Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>