force-app/main/default/objects/Prospect__c/fields/Sales_Call_Follow_Up_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Sales_Call_Follow_Up_Bucket__c</fullName>
    <label>Last Sales Call Follow-Up Bucket</label>
    <length>255</length>
    <type>Text</type>
</CustomField>