force-app/main/default/objects/Prospect__c/fields/Sales_Call_Proposed_Date_Of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Sales_Call_Proposed_Date_Of_Visit__c</fullName>
    <label>Last Sales Call Proposed Date Of Visit</label>
    <type>DateTime</type>
</CustomField>