force-app/main/default/objects/Prospect__c/fields/Sales_Call_Reason_Not_Interested__c.field-meta.xml
<CustomField>
    <fullName>Sales_Call_Reason_Not_Interested__c</fullName>
    <label>Sales Call Reason If Not Interested</label>
    <length>255</length>
    <type>Text</type>
</CustomField>