force-app/main/default/objects/Prospect__c/fields/Sales_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Email__c</fullName>
    <label>Sales Manager Email</label>
    <type>Email</type>
</CustomField>