force-app/main/default/objects/Prospect__c/fields/Sales_Next_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Next_Action_Date__c</fullName>
    <label>Sales Next Action Date</label>
    <type>DateTime</type>
</CustomField>