force-app/main/default/objects/Prospect__c/fields/Secondary_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Mobile_No__c</fullName>
    <formula>IF( AND(Lead__c == null , Opportunity__c == null ,Account__c != null ) , Account__r.RW_Additional_Contact_No__c , IF(Lead__r.IsConverted == true, Opportunity__r.Account.RW_Additional_Contact_No__c , IF( Opportunity__c != null, Opportunity__r.Account.RW_Additional_Contact_No__c , Lead__r.Phone ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Mobile No</label>
    <type>Text</type>
</CustomField>