force-app/main/default/objects/Prospect__c/fields/SM_Assignment_DateTime__c.field-meta.xml
<CustomField>
    <fullName>SM_Assignment_DateTime__c</fullName>
    <label>SM Assignment DateTime</label>
    <type>DateTime</type>
</CustomField>