force-app/main/default/objects/Prospect__c/fields/SM_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_Name__c</fullName>
    <formula>User__r.FirstName + &apos; &apos; + User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SM Name</label>
    <type>Text</type>
</CustomField>