force-app/main/default/objects/Prospect__c/fields/Sourcing_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Manager__c</fullName>
    <label>Sourcing Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A Aakash Tripathi</fullName>
            </value>
            <value>
                <fullName>A Abhijeet Gaikwad</fullName>
            </value>
            <value>
                <fullName>A Abhijeet Mhaskar</fullName>
            </value>
            <value>
                <fullName>A Abhik Nandy</fullName>
            </value>
            <value>
                <fullName>A Adarsh Pandey</fullName>
            </value>
            <value>
                <fullName>A Aditya Sankpal</fullName>
            </value>
            <value>
                <fullName>Aakash Chavan</fullName>
            </value>
            <value>
                <fullName>A Akash Malik</fullName>
            </value>
            <value>
                <fullName>A Akash Singh</fullName>
            </value>
            <value>
                <fullName>A Amit Sachde</fullName>
            </value>
            <value>
                <fullName>A Anam Khan</fullName>
            </value>
            <value>
                <fullName>A Arjun K. Relwani</fullName>
            </value>
            <value>
                <fullName>Aashima Sheikh</fullName>
            </value>
            <value>
                <fullName>A Ashish Bodwani</fullName>
            </value>
            <value>
                <fullName>A Ashish Pal</fullName>
            </value>
            <value>
                <fullName>A Ashok Rathod</fullName>
            </value>
            <value>
                <fullName>A Asim Master</fullName>
            </value>
            <value>
                <fullName>A Balivada Pradeep</fullName>
            </value>
            <value>
                <fullName>Abdullah Hafiz</fullName>
            </value>
            <value>
                <fullName>Abdullah Shaikh</fullName>
            </value>
            <value>
                <fullName>Abhay Ghogare</fullName>
            </value>
            <value>
                <fullName>Abhay Jaiswal</fullName>
            </value>
            <value>
                <fullName>Abhijeet Pawar</fullName>
            </value>
            <value>
                <fullName>Abhijit Karande</fullName>
            </value>
            <value>
                <fullName>Abhijit Kargirwar</fullName>
            </value>
            <value>
                <fullName>Abhik Nandy</fullName>
            </value>
            <value>
                <fullName>Abhinandan D Souza</fullName>
            </value>
            <value>
                <fullName>Abhinay Edake</fullName>
            </value>
            <value>
                <fullName>Abhiram Kuchibhatla</fullName>
            </value>
            <value>
                <fullName>Abhishek Dash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>