force-app/main/default/objects/Prospect__c/fields/Temp_Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Temp_Channel_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Temp Channel Partner</label>
    <referenceTo>Temp_Channel_Partner__c</referenceTo>
    <relationshipLabel>Prospects</relationshipLabel>
    <relationshipName>Prospects</relationshipName>
    <type>Lookup</type>
</CustomField>