force-app/main/default/objects/Prospect__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned to SM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Prospects</relationshipName>
    <type>Lookup</type>
</CustomField>