force-app/main/default/objects/Prospect__c/validationRules/Prospects_not_allowed_for_these_projects.validationRule-meta.xml
<ValidationRule>
    <fullName>Prospects_not_allowed_for_these_projects</fullName>
    <active>true</active>
    <errorConditionFormula>And(
	Not(ISPICKVAL($User.Team__c, &apos;&apos;)),
	OR(
		Project__c  = &apos;Runwal Gardens&apos;,
		Project__c  = &apos;Runwal MyCity&apos;
	),
$Label.Disable_all_validations_from_prospect == &quot;false&quot; /*Added by Prashant to control disabling all validations together*/
)</errorConditionFormula>
    <errorMessage>Prospects not allowed for Gardens and My City</errorMessage>
</ValidationRule>