force-app/main/default/objects/Prospect__c/validationRules/Retention_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Retention_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Lead_Source__c , &apos;Retention&apos;),
OR(ISBLANK( Retention_Customer_SAP_Code__c ),
ISBLANK( Retention_Closing_Head_Name__c )
),
$Label.Disable_all_validations_from_prospect == &quot;false&quot; /*Added by Prashant to control disabling all validations together*/
)</errorConditionFormula>
    <errorMessage>Kindly Update Retention Customer SAP Code and Retention Closing Head Name</errorMessage>
</ValidationRule>