force-app/main/default/objects/Prospect__c/validationRules/Validation_for_Channel_Partner.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_Channel_Partner</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IF( 
      ISPICKVAL( Lead_Source__c,&apos;Channel Partner&apos;) , 
     ISBLANK( Channel_Partner__c ), false),
$Label.Disable_all_validations_from_prospect == &quot;false&quot; /*Added by Prashant to control disabling all validations together*/)</errorConditionFormula>
    <errorDisplayField>Channel_Partner__c</errorDisplayField>
    <errorMessage>Channel Partner should be required</errorMessage>
</ValidationRule>