force-app/main/default/objects/Prospect__c/validationRules/Validation_for_Customer_Reference.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_Customer_Reference</fullName>
    <active>true</active>
    <description>It is  mandatory when lead source is Loyalty and also when lead source is Referral and Lead sub Source is Existing client reference.</description>
    <errorConditionFormula>AND(IF(  
      OR ( (ISPICKVAL( Lead_Source__c, &apos;Loyalty&apos;)), 
           (ISPICKVAL(Lead_Source__c,&apos;Referral&apos;)), 
           (ISPICKVAL(Lead_Sub_Source__c, &apos;Existing client reference&apos;))
          )
        , ISBLANK( Customer_Reference__c)   , false),
$Label.Disable_all_validations_from_prospect == &quot;false&quot; /*Added by Prashant to control disabling all validations together*/)</errorConditionFormula>
    <errorDisplayField>Customer_Reference__c</errorDisplayField>
    <errorMessage>Customer Reference should be required</errorMessage>
</ValidationRule>