force-app/main/default/objects/Prospect__c/validationRules/Validation_for_Employee_Reference.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_Employee_Reference</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IF(ISPICKVAL(Lead_Source__c,&apos;Employee / Management reference&apos;),ISBLANK(Employee_Reference__c),false),
$Label.Disable_all_validations_from_prospect == &quot;false&quot; /*Added by Prashant to control disabling all validations together*/)</errorConditionFormula>
    <errorDisplayField>Employee_Reference__c</errorDisplayField>
    <errorMessage>Please Select Employee/Manager.</errorMessage>
</ValidationRule>