force-app/main/default/objects/Prospect__c/validationRules/Validation_for_Referral_Lead_Source.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_Referral_Lead_Source</fullName>
    <active>true</active>
    <description>Validation for Referral Lead Source</description>
    <errorConditionFormula>AND(IF(ISPICKVAL(Lead_Source__c,&apos;Referral&apos;),
			ISBLANK(TEXT(Lead_Sub_Source__c)),false),
$Label.Disable_all_validations_from_prospect == &quot;false&quot; /*Added by Prashant to control disabling all validations together*/)</errorConditionFormula>
    <errorDisplayField>Lead_Sub_Source__c</errorDisplayField>
    <errorMessage>Please Select lead sub source for Referral.</errorMessage>
</ValidationRule>