force-app/main/default/objects/Prospect__c/listViews/My_Prospects.listView-meta.xml
<ListView>
    <fullName>My_Prospects</fullName>
    <columns>NAME</columns>
    <columns>Sales_Call_Description__c</columns>
    <columns>SM_Assignment_DateTime__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Sales_Call_Attempt_Date__c</columns>
    <columns>User__c</columns>
    <columns>Sales_Call_Attempted_By__c</columns>
    <columns>Sales_Call_Attempt_Status__c</columns>
    <columns>call_proposed_date_of_visit__c</columns>
    <columns>Sales_Next_Action_Date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Ravindra Gharge</value>
    </filters>
    <label>My Prospects</label>
</ListView>